--- a/main.html
+++ b/main.html
@@ -10,6 +10,20 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<article>
+		<p> this is the first paragraph</p>
+		<p> this is the second paragraph</p>
+		<p> this is the third paragraph</p>
+		<p> this is the fourth paragraph</p>
+	</article>
+	<ul>
+		<li>First item</li>
+		<li>Second item</li>
+		<li>Third item</li>
+		<li>Fourth item</li>
+		<li>Fifth item</li>
+	</ul>
+	
 
 </body>
 
